# SARSCOV-HIERARCHY

./: .gitignore  Dockerfile  INFORME.md  README.md  informe.md  requeriments.txt  requirements.txt  sarscovhierarchy.py
data/: sequences.csv
data/data_test/: sequences.csv
data_tratamiento/: data_reader.py
docs/: .rustc_info.json  index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/either/: enum.Either.html
docs/doc/indoc/: all.html  index.html  macro.indoc.html
docs/doc/indoc_impl/: all.html  derive.proc_macro_hack_indoc.html  index.html
docs/doc/inventory/: type.iter.html
docs/doc/lock_api/: struct.Mutex.html  struct.ReentrantMutex.html  struct.RwLock.html
docs/doc/parking_lot/: enum.OnceState.html  struct.Condvar.html  struct.Once.html  struct.RawMutex.html  struct.RawRwLock.html  struct.RawThreadId.html  struct.WaitTimeoutResult.html
docs/doc/parking_lot_core/: enum.FilterOp.html  enum.ParkResult.html  enum.RequeueOp.html  struct.ParkToken.html  struct.UnparkResult.html  struct.UnparkToken.html
docs/doc/pyo3/: all.html  enum.PyErrValue.html  fn.prepare_freethreaded_python.html  index.html  macro.create_exception.html  macro.py_run.html  (+24 more)
output/: hierarchy
src/: csv_utils.py  data_reader.py  fasta_utils.py  main.py  sarscovhierarchy.py
src/main/: sarscovhierarchy.py
src/python/: hierarchy  sarscovhierarchy.py
src/rust/: Cargo.toml
src/rust/src/: lib.rs  matrix.rs
src/utils/: compares.c  csv_table.py  csv_utils.py  fasta_map.py  fasta_utils.py
test/: test_csv_table.py  test_fasta_map.py
(+2332 files in other folders)
